--- a/style.css
+++ b/style.css
@@ -7,4 +7,27 @@
     background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
- }
+    margin: 10px;
+    }
+h1 {
+    text-align: center;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;    
+}
+
+.list {
+    list-style: none;
+}
+.list-content{
+    width: 20%;    
+}
+.image {
+    width: 70%;    
+}
+
+.image img {
+    width: 100%;
+}
