--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
- }
- body {
-    background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    margin: 10px;
-    }
+	/*https://uniwebsidad.com/libros/css-avanzado/capitulo-2*/
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box; /*https://developer.mozilla.org/es/docs/Web/CSS/box-sizing*/
+}
+body {
+	background-color: #fff;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15px;
+	margin: 10px;
+}
 h1 {
-    text-align: center;
+	text-align: center;
 }
 
 .content {
-    display: flex;
-    justify-content: space-between;    
+	display: flex;
+	justify-content: space-between;
 }
 
 .list {
-    list-style: none;
+	list-style: none; /*elimina las bolitas en una lista desordenada (ul) HTML*/
 }
-.list-content{
-    width: 20%;    
+.list-content {
+	width: 20%; /*tiene ancho de 20% de su contenedor padre que tiene class="content"*/
 }
 .image {
-    width: 70%;    
+	width: 70%; /*tiene ancho de 70% de su contenedor padre que tiene class="content"*/
 }
 
 .image img {
-    width: 100%;
+	width: 100%; /*tiene ancho de 100% de su contenedor padre que tiene class="image"*/
 }
