--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ h1 {
 .buttons {
 	display: flex;
 	justify-content: space-around;
+	margin: 20px 0px;
 }
 
 .content {
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
+
 }
 
 .list {
@@ -37,6 +40,5 @@ h1 {
 .image img {
 	width: 100%; /*tiene ancho de 100% de su contenedor padre que tiene class="image"*/
 	/*margin: 30px 0;*/
-	margin-top: 30px;
 }
 
