--- a/style.css
+++ b/style.css
@@ -9,15 +9,27 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
 	margin: 30px;
+	background-image: url(/img/Fondo-gato.colores.png);
 }
 
 h1 {
 	text-align: center;
+	text-transform: uppercase;
+	font-family: "Rubik Beastly", cursive;
+	font-size: 60px;
+	font-weight: 400;
+	color: #c25b5e;
+	text-shadow: 1px 0 1px #000, 
+0 1px 1px #000, 
+-1px 0 1px #000, 
+0 -1px 1px #000;
+
+
 }
 
-.mascara {
-	width: 25px;
-}
+
+	
+
 
 
 
@@ -64,11 +76,17 @@ h1 {
 }
 
 .list-content {
-	width: 200px; /*tiene ancho de 20% de su contenedor padre que tiene class="content"*/
+	width: 260px; /*tiene ancho de 20% de su contenedor padre que tiene class="content"*/
+	background-color: #eb898e;
+	background: linear-gradient(to right, #c25b5e, #eb898e, #e29899);
+	border-radius: 14px;
+	border: 2px solid #721c20;
+	padding: 12px;
+	margin-top: 10px;
 }
 
 .list-title {
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 }
 
 .list {
@@ -80,6 +98,15 @@ h1 {
 	margin-bottom: 8px;
 }
 
+.coder li::before {
+	content: "";
+background: url("../img/juguete-de-gato.ico");
+}
+
+.coder:last-child 
+{
+	margin-bottom: 0px;
+}
 .image {
 	width: 70%; /*tiene ancho de 70% de su contenedor padre que tiene class="content"*/
 }
@@ -87,6 +114,10 @@ h1 {
 .image img {
 	width: 100%; /*tiene ancho de 100% de su contenedor padre que tiene class="image"*/
 	/*margin: 30px 0;*/
+}
+
+.ovillo {
+	width: 25px;
 }
 
 /*LISTA DE COLORES
