--- a/style.css
+++ b/style.css
@@ -53,10 +53,6 @@ h1 {
 	border: 2px solid #721c20;
 }
 
-.btn.grupos {
-	padding: 6px 8px; /*new*/
-}
-
 .form label {
 	font-size: 17px;
 }
@@ -70,7 +66,7 @@ h1 {
 
 .select {
 	font-size: 17px;
-	padding: 6px 1px 6px 6px;
+	padding: 5px 1px 5px 5px;
 	border-radius: 10px;
 	border: 2px solid #721c20;
 	margin-right: 7px;
@@ -121,6 +117,11 @@ h1 {
 	margin-bottom: 8px;
 }
 
+.image {
+	position: relative;
+	z-index: 799;
+}
+
 .image img {
 	width: 100%;
 }
@@ -136,3 +137,33 @@ h1 {
 #a52a2a
 #e29899
 */
+
+.answer {
+	/*border: #000 solid 1px;*/
+	width: 500px;
+	height: 440px;
+	padding: 10px;
+	position: absolute;
+	top: 11%;
+	left: 28%;
+	z-index: 800;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+
+}
+
+.voluntaria {
+	color: #000;
+	text-align: center;
+	font-size: 50px;
+	border: #000 2px dotted;
+	padding: 10px;
+}
+
+.grupo {
+	font-size: 18px;
+	/*border: #000 2px dotted;
+	padding: 5px;
+	margin-bottom: 5px;
+}
