--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
 	margin: 13px 30px 10px;
-	background-image: url(Assets\Fondo-gato.colores.png);
+	background-image: url('Assets/fondo-gato-colores.png');
 }
 
 h1 {
