--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1rem;
+	font-size: 15px;
 	margin: 13px 30px 10px;
 	background-image: url('Assets/fondo-gato-colores.png');
 }
@@ -16,7 +16,7 @@ h1 {
 	text-align: center;
 	text-transform: uppercase;
 	font-family: "Rubik Beastly", cursive;
-	font-size: 3.67rem;
+	font-size: 3.5rem;
 	font-weight: 400;
 	color: #c25b5e;
 	text-shadow: 1px 0 1px #000, 0 1px 1px #000, -1px 0 1px #000, 0 -1px 1px #000;
@@ -39,6 +39,7 @@ h1 {
 
 .buttons {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center; /*new*/
 	gap: 100px; /*new*/
 	align-items: center;
@@ -89,6 +90,7 @@ h1 {
 .lists {
 	/*ALL NEW*/
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-evenly;
 }
 
@@ -165,4 +167,25 @@ h1 {
 	/*border: #000 2px dotted;
 	padding: 5px;
 	margin-bottom: 5px;*/
+}
+
+@media (max-width:650px){
+	body{
+		display:flex;
+		flex-wrap: wrap;
+	}
+}
+
+@media (max-width:650px){
+	.list-content{
+		display:flex;
+		flex-wrap: wrap;
+	}   
+}
+
+@media (max-width:650px){
+	.buttons-image-container{
+		display:flex;
+		flex-wrap: wrap;
+	}   
 }
