--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1rem;
+	font-size: 15px;
 	margin: 13px 30px 10px;
-	background-image: url('Assets/fondo-gato-colores.png');
+	background-image: url("Assets/fondo-gato-colores.png");
 }
 
 h1 {
 	text-align: center;
 	text-transform: uppercase;
 	font-family: "Rubik Beastly", cursive;
-	font-size: 3.67rem;
+	font-size: 3.57rem;
 	font-weight: 400;
 	color: #c25b5e;
 	text-shadow: 1px 0 1px #000, 0 1px 1px #000, -1px 0 1px #000, 0 -1px 1px #000;
@@ -149,7 +149,6 @@ h1 {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
-
 }
 
 .voluntaria {
