--- a/style.css
+++ b/style.css
@@ -168,11 +168,12 @@ h1 {
 	margin-bottom: 5px;*/
 }
 
-@media (max-width:650px){
+@media (max-width:650px) and (min-width: 1440px) {
 	body{
 		display:flex;
 		flex-wrap: wrap;
-	}
+		} 
+
 	.list-content{
 		display:flex;
 		flex-wrap: wrap;
@@ -181,4 +182,10 @@ h1 {
 		display:flex;
 		flex-wrap: wrap;
 	}   
+}
+@media only screen and (min-width: 1440px) {
+	/* Styles */
+	html {
+		font-size: 13px;
+	}
 }
